--- a/ChargeShare.Shared/ChargeShare.Shared.csproj
+++ b/ChargeShare.Shared/ChargeShare.Shared.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\ChargeShare.UserService\ChargeShare.UserService.csproj" />
+  </ItemGroup>
+
 </Project>
